hotfix: fix z-index for toolbar

--- a/components/Toolbar/Toolbar.module.css
+++ b/components/Toolbar/Toolbar.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     border-radius: 200px;
     overflow: auto;
-    z-index: 200;
+    z-index: 3;
 }
 
 .Toolbar__input {
